bugs found and fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <h1>this is the weather channel</h1>
-    <script src="js/index.js"></script>
 
+    <div id="weather-container">
+        <nav>
+          <button id="maxTempBtn">Max Temperature</button>
+          <button id="minTempBtn">Min Temperature</button>
+        </nav>
+        <div id="weather-display">
+        </div>
+      </div>
+      
+    <script src="js/index.js"></script>
 </body>
 </html>
